--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <style>
 body{margin:0;font-family:'Cairo',sans-serif;background:#f4f4f4}
-header{background:#000;color:#fff;padding:15px 30px;display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;z-index:10}
+header{background:##2E160D;color:#fff;padding:15px 30px;display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;z-index:10}
 header h1{margin:0;color:#f5c542}
 nav a{color:#fff;margin-right:15px;text-decoration:none;font-weight:bold}
 .social-header a{margin-right:10px;vertical-align:middle}
@@ -188,4 +188,5 @@ function sendOrder(){
 
 </body>
 </html>
+
 
